[package]
name = "voltage-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
voltage-core = { path = "../voltage-core" }
voltage-parser = { path = "../voltage-parser" }
voltage-jit = { path = "../voltage-jit" }
voltage-vm = { path = "../voltage-vm" }
clap = { version = "4.0", features = ["derive"] }

